@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-*
+* [jan] Return ETags with browse() API method.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1587,7 +1587,7 @@
    <date>2014-06-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-*
+* [jan] Return ETags with browse() API method.
    </notes>
   </release>
  </changelog>
