@@ -2,6 +2,7 @@
 v4.3.0-git
 ----------
 
+[jan] Return ETags with browse() API method.
 
 ----------
 v4.2.1
